Minor tweak to website.

--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>TZInfo - Ruby Timezone Library</h1>
     <p>
-      TZInfo is a Ruby library that uses the standard tz (Olson) database to provide
+      TZInfo is a Ruby library that uses the standard <a href="http://www.twinsun.com/tz/tz-link.htm">tz (Olson) database</a> to provide
       daylight-savings aware transformations between times in different timezones.
       The tz database is compiled into Ruby classes which are packaged in the release.
       No external zoneinfo files are required at runtime.
