Add mailing list links to readme and website.

--- a/website/index.html
+++ b/website/index.html
@@ -24,10 +24,18 @@
     <p>
       API Documentation is <a href="doc/">available</a>.
     </p>
+    <h2>Mailing Lists</h2>
+    <p>
+      There are two TZInfo <a href="http://rubyforge.org/mail/?group_id=894">mailing lists</a>:      
+    </p>   
+    <ul>
+      <li><a href="http://rubyforge.org/pipermail/tzinfo-announce/">annouce</a> - Announcements of new versions, etc.</li>
+      <li><a href="http://rubyforge.org/mailman/listinfo/tzinfo-users">users</a> - General discussion about TZInfo. Please post any questions you have to this list.</li>
+    </ul>
     <h2>RubyForge</h2>
     <p>
       The RubyForge project page for TZInfo can be found at <a href="http://rubyforge.org/projects/tzinfo/">http://rubyforge.org/projects/tzinfo/</a>.
-    </p>
+    </p>    
     <h2>References</h2>
     <p>
       <a href="http://scott.elitists.net/">Scott Barron</a> of <a href="http://lunchboxsoftware.com/">Lunchbox Software</a>
@@ -55,7 +63,7 @@
       <small>
         <a href="http://phil.ross.org.uk/">Phil Ross</a>
         <br />
-        2nd October 2005
+        5th February 2006
       </small>
     </p>
   </body>
