--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>TZInfo - Ruby Timezone Library</title>
     <link rel="stylesheet" title="main" href="global.css" type="text/css" />
   </head>
