Update Time Zone Database link to new IANA page. Remove broken Rails Wiki link.

--- a/website/index.html
+++ b/website/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>TZInfo - Ruby Timezone Library</h1>
     <p>
-      TZInfo is a Ruby library that uses the standard <a href="http://www.twinsun.com/tz/tz-link.htm">tz (Olson) database</a> to provide
-      daylight savings aware transformations between times in different time zones.
+      TZInfo is a Ruby library that uses the standard <a href="http://www.iana.org/time-zones">Time Zone Database</a> (often called
+      tz or zoneinfo) to provide daylight savings aware transformations between times in different time zones.
       The tz database is compiled into Ruby modules which are packaged in the release.
       No external zoneinfo files are required at runtime.
     </p>
@@ -41,8 +41,7 @@
     <h2>Ruby on Rails</h2>
     <p>
       Ruby on Rails (version 2.1 and later) uses TZInfo for timezone support. Rails can automatically store times in UTC
-      and convert to the user's timezone for display. See <a href="http://wiki.rubyonrails.org/howtos/time-zones">Working wth Time Zones</a> in
-      the Ruby on Rails Wiki for details.
+      and convert to the user's timezone for display.
     </p>
     <h2>Alternatives</h2>
     <h3>Ruby/TZFile</h3>
@@ -54,7 +53,7 @@
       <small>
         <a href="http://philross.co.uk">Phil Ross</a>
         <br />
-        15th January 2011
+        6th November 2011
       </small>
     </p>
   </body>
